# OmniZKP

./: MATH_AND_CRYPTO.md  README.md
contracts/: OmniAnchor.sol
omni-zkp-core/: Cargo.toml  omni_prover.pk  omni_verifier.vk
omni-zkp-core/src/: circuit.rs  lib.rs  main.rs  tests.rs  utils.rs
omni-zkp-web/: fix_imports.sh  next.config.mjs  next.config.ts  omni-zkp-core.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
omni-zkp-web/app/: page.tsx
omni-zkp-web/contracts/: MockVerifier.sol  OmniIdentity.sol
omni-zkp-web/src/app/: globals.css  layout.tsx  page.tsx
omni-zkp-web/src/components/features/identity/: ShardRecovery.tsx  WalletCard.tsx
omni-zkp-web/src/components/features/recovery/: DeadMansSwitch.tsx
omni-zkp-web/src/components/features/verification/: ContextSliders.tsx  CredentialJson.tsx  VerifierView.tsx
omni-zkp-web/src/components/layout/: Navigation.tsx  SystemLogs.tsx
omni-zkp-web/src/components/ui/: index.tsx
omni-zkp-web/src/lib/: types.ts
omni-zkp-web/utils/: anchor.ts  crypto.ts  dkim.ts  guardian.ts  hardware.ts
