[package]
name = "omni-zkp-core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
rand_core = "0.6"
rand = "0.8"
itertools = "0.10"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
hex = "0.4"
sharks = "0.5.0" # Production Galois Field Shamir's Secret Sharing